--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-json": "^6.1.0",
+		"@sveltejs/adapter-netlify": "^4.4.0",
 		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
